--- a/assets/styles.css
+++ b/assets/styles.css
@@ -78,13 +78,29 @@ html, body {
 }
 
 .link_button {
-	border: none;
+	
 	text-decoration: none;
-	padding: 5px;
+	cursor: pointer;
+
+	width: 38px;
+	height: 38px;
+	display: inline-block;
+
+	border: 3px solid; 
+	border-radius: 50%;
+	border-color: rgba(255, 255, 255, 0.25);
+	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.25);
+
+	margin: 5px;
 }
 
 .link_button svg {
 	fill: #fff;
-	width: 33px;
+	opacity: 0.8;
+	width: 32px;
 	height: 32px;
+}
+
+.link_button:hover svg {
+	opacity: 1;
 }
